--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "jie-next-start-kit",
+  "name": "jie-keys",
   "version": "1.0.0",
-  "description": "My next start kit, include ",
+  "description": "My components",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 8080",
     "build": "next build",
     "start": "next start"
   },
@@ -15,16 +15,11 @@
   "dependencies": {
     "@material-ui/core": "4.11.4",
     "@material-ui/lab": "4.0.0-alpha.58",
-    "axios": "0.21.1",
     "classnames": "2.3.1",
-    "gray-matter": "4.0.3",
     "next": "10.2.0",
-    "next-pwa": "5.2.21",
     "next-translate": "1.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "remark": "13.0.0",
-    "remark-html": "13.0.1",
     "sass": "1.32.13",
     "styled-components": "5.3.0",
     "typescript": "4.2.4"
