--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev --port 8080",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "unitTest": "jest"
   },
   "keywords": [
     "start kit"
@@ -25,6 +26,7 @@
     "typescript": "4.2.4"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
     "@types/styled-components": "5.1.9",
@@ -32,6 +34,7 @@
     "@typescript-eslint/parser": "4.24.0",
     "airbnb": "0.0.2",
     "babel-eslint": "10.1.0",
+    "babel-jest": "^26.3.0",
     "babel-plugin-import": "^1.13.3",
     "eslint": "7.26.0",
     "eslint-config-airbnb": "18.2.1",
@@ -41,6 +44,8 @@
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.23.2",
     "eslint-plugin-react-hooks": "4.2.0",
+    "jest": "^26.4.2",
+    "jest-html-reporters": "^2.0.3",
     "prettier": "2.3.0"
   },
   "repository": "https://github.com/smaragdinesapphire/jie-next-start-kit.git"
