--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,5 @@
 {
-  "presets": [
-    "next/babel"
-  ],
+  "presets": ["next/babel"],
   "plugins": [
     // styled-components 避免 ssr 會解析錯誤
     [
