--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --port 8080",
     "build": "next build",
     "start": "next start",
-    "unitTest": "jest"
+    "unitTest": "jest",
+    "format": "prettier **/* --write --ignore-unknown"
   },
   "keywords": [
     "start kit"
